# hyperspanner

./: .gitignore  .prettierignore  LICENSE  README.md  package.json  pnpm-lock.yaml  quick-start.md
.github/workflows/: release.yml
apps/desktop/: .gitignore  eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: fs.rs  hash.rs  mod.rs  protobuf.rs  tls.rs
apps/desktop/src/contexts/: ThemeContext.tsx
apps/desktop/src/hooks/: useHashRoute.ts  useSound.ts
apps/desktop/src/ipc/: errors.ts  fs.ts  hash.ts  index.ts  invoke.ts  ipc.test.ts  protobuf.ts  tls.ts
apps/desktop/src/keys/: ShortcutHelp.module.css  ShortcutHelp.tsx  index.ts  shortcuts.ts  useGlobalShortcuts.ts
apps/desktop/src/pages/PrimitiveGallery/: PrimitiveGallery.module.css  PrimitiveGallery.tsx  index.ts
apps/desktop/src/pages/Screens/: DerisScreen.module.css  DerisScreen.tsx  ScreensHub.module.css  ScreensHub.tsx  index.ts  registry.ts
apps/desktop/src/screens/: HomeView.module.css  HomeView.tsx  index.ts
apps/desktop/src/shell/: AppShell.module.css  AppShell.tsx  BottomZone.module.css  BottomZone.tsx  CenterZone.module.css  CenterZone.tsx  CommandPalette.module.css  CommandPalette.tsx  LeftNavigator.module.css  LeftNavigator.tsx  PaneDropTarget.module.css  PaneDropTarget.tsx  PresetSelector.module.css  PresetSelector.test.tsx  PresetSelector.tsx  RightZone.module.css  RightZone.tsx  TabActionMenu.module.css  TabActionMenu.tsx  ToolStatusPanels.module.css  ToolStatusPanels.tsx  TopRail.module.css  TopRail.tsx  UpdaterBanner.module.css  UpdaterBanner.tsx  ZoneTabStrip.module.css  ZoneTabStrip.tsx  index.ts  useZoneState.ts
apps/desktop/src/state/: index.ts  presets.ts  useFavorites.test.ts  useFavorites.ts  useRecents.test.ts  useRecents.ts  useTool.test.ts  useTool.ts  useUpdater.test.ts  useUpdater.ts  workspace.test.ts  workspace.ts  workspace.types.ts
apps/desktop/src/styles/: global.css
apps/desktop/src/themes/: classic.ts  index.ts  lower-decks.ts  nemesis-blue.ts  picard-modern.ts
apps/desktop/src/tools/: PlaceholderTool.module.css  PlaceholderTool.tsx  index.ts  registry.ts
apps/desktop/src/tools/base64-pad/: Base64Pad.module.css  Base64Pad.test.tsx  Base64Pad.tsx  index.ts  lib.test.ts  lib.ts
apps/desktop/src/tools/case-transform/: CaseTransform.module.css  CaseTransform.test.tsx  CaseTransform.tsx  index.ts  lib.test.ts  lib.ts
apps/desktop/src/utils/: sounds.ts
docs/: index.yaml  lessons.yaml  plan-001-lcars-approach-research.md  plan-002-implementation.md  plan-005-lcars-polish.md  plan-006-derisk-screens-and-gallery.md  plan-007-packaging-and-updates.md  plan.md  research.md  status.md  tool-pattern.md
scripts/: bump-version.mjs
(+94 files in other folders)
