[package]
name = "hyperspanner"
version = "0.0.3"
description = "A Starfleet engineering console for developer utility workflows."
authors = ["Eric Zimmerman"]
license = "MIT"
repository = "https://github.com/echozulucode/hyperspanner"
homepage = "https://github.com/echozulucode/hyperspanner"
edition = "2021"
rust-version = "1.77"

[lib]
name = "hyperspanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Phase 7 — auto-updates. The updater plugin pings a manifest URL on
# launch, downloads the new bundle if a newer version is available,
# verifies the minisign signature against the public key in
# `tauri.conf.json`, then hands off to NSIS (Windows) or replaces the
# AppImage / .deb / .rpm contents (Linux). The process plugin pairs
# with it for the post-install relaunch — `relaunch()` is the
# canonical "restart cleanly into the new binary" call.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Phase 6.5 deps. Kept conservative: TLS via rustls (pure-Rust, no
# OpenSSL build step on Windows), cert parsing via x509-parser. The
# protobuf decoder is intentionally schema-less in 6.5 — it parses wire
# format directly using varint + tag math, so we don't pull in
# protox / prost-reflect just for an MVP.
tokio = { version = "1", features = ["net", "io-util", "time", "rt"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"
rustls-pki-types = "1"
x509-parser = "0.16"

[dev-dependencies]
# Scoped to unit tests for `crate::commands::fs` — writes controlled
# fixtures for the stat/size/utf-8 branches without polluting the repo.
tempfile = "3"

[features]
# Default-enabled features go here as the project grows.
custom-protocol = ["tauri/custom-protocol"]
